<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="@color/light_color"
    android:layout_height="match_parent"
    tools:context=".fragments.SplashFragment">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/human_body_generator"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/poppins_medium"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintBottom_toTopOf="@id/get_start"
        android:drawablePadding="@dimen/_15sdp"
        app:drawableTopCompat="@drawable/splash_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/get_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_80sdp"
        android:background="@drawable/custom_btn"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/textView1"
        android:text="@string/get_started"
        android:layout_marginBottom="@dimen/_10sdp"
        android:textColor="@color/white"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="634dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/this_action_may_contain_ads"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="@+id/get_start"
        app:layout_constraintStart_toStartOf="@+id/get_start"/>


</androidx.constraintlayout.widget.ConstraintLayout>