<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_4sdp">

    <ImageView
        android:id="@+id/reshapeBg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/reshape_bg"
        app:layout_constraintDimensionRatio="3:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />


    <TextView
        android:id="@+id/selectPosTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:fontFamily="@font/poppins_medium"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="@string/reshape_body"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/reshapeBg"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/selectPosTv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:fontFamily="@font/poppins_regular"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="@string/image_to_image"
        android:textColor="@color/white"
        android:textSize="@dimen/_8ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectPosTv"
        tools:ignore="ContentDescription" />
    <TextView
        app:drawableEndCompat="@drawable/next_arrow_try_now"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:background="@drawable/reshape_try_now_bg"
        android:id="@+id/selectPosTv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="marquee"
        android:focusable="true"
        android:textStyle="bold"
        android:focusableInTouchMode="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:paddingHorizontal="@dimen/_6sdp"
        android:text="@string/try_now"
        android:textColor="@color/white"
        android:textSize="@dimen/_8ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectPosTv1"
        tools:ignore="ContentDescription,RtlSymmetry" />
</androidx.constraintlayout.widget.ConstraintLayout>

