<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_bg"
    android:clipToPadding="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:gravity="center"
            android:text="@string/app_name"
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/top"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_2sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            tools:ignore="ContentDescription" />

        <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/generate"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_btn"
            app:layout_constraintTop_toBottomOf="@id/top">

            <TextView
                android:layout_margin="@dimen/_8sdp"
                android:id="@+id/Gen_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/remove"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_ads"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/Gen_txt"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />


            <TextView
                android:layout_marginBottom="@dimen/_8sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/background"
                android:textColor="@color/white"
                android:textSize="@dimen/_8ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/Gen_txt"
                app:layout_constraintStart_toStartOf="@id/Gen_txt"
                app:layout_constraintTop_toBottomOf="@+id/Gen_txt"

                />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>